inst/app/www/out_panels.css
  
  h4 {
    font-family: "Proxima Nova", "Helvetica Neue";
    line-height: 80%;
  }
  
  h2 {
    margin-left: 2.5% ; 
    font-family: "Proxima Nova", "Helvetica Neue";
  }
  
  h1 {
   color: black;
   margin-top: 1.2%;
   font-family: "Open Sans","Proxima Nova", "Helvetica Neue";
   font-size: 3.5vw;
   padding-right: 1%;
   margin-bottom: .5vh;
   white-space: nowrap;
   font-weight: bold
 }
 
 h5 {
   margin-bottom: 0%;
 }
 
 #title-body-text {
   font-size: 10px;
 }
 
  #input-header {
    font-size: 2vw;
    font-weight: 500;
    margin-top: 4%;
    margin-left: 4%;
    font-family: "Proxima Nova", "Helvetica Neue";
  }
  
  #demo {
    margin-left: 4%;
  }
  
  #controls {
      /* Appearance */
      background-color: white;
      left: 1.8%;
      top: 1.5%;
      width: 32%;
      height: auto;
      /* Fade out while not hovering */
      opacity: 0.7;
      zoom: 0.9;
  } 
  
  #submit {
    padding-top: 2%;
    padding-bottom: 5%;
  }
  
.leaflet-right .leaflet-control {
    margin-right: 10%;
}

.leaflet-bottom .leaflet-control {
    margin-bottom: 5%;
    bottom: 38vh;
}
        
  .user-input {
    padding-top: 3%;
  }
  
  .out-panel {
    background-color:rgb(196, 196, 196);
    opacity: 0.8;
    margin: auto;
    bottom: 2%;
    height: 36%;
  } 
  
  #top-zips {
    right: 1.8%;
    width: 30%;
  }
  
  #zip-detail {
    left: 1.8%;
    width: 65%;
  }
  
  #metric-panel {
    left: 35%;
    margin-bottom: 5%;
    top: 1.5%;
    height: auto;
    width: 15%;
    background-color: white; 
    /*background-color: transparent; 
    border-color: transparent; */
    opacity: 0.85;
    zoom: 0.9;
  }
  
  #metric-select {
    padding: 3% 4% 0% 4%;
    }

  #in-text {
    font-size: 1.75vmin;
    padding-bottom: 3%;
    color: rgb(80,80,80);
    max-width: 95%;
    font-family: "Proxima Nova", "Helvetica Neue";
  }

    
  .out-header {
    color: rgb(60,60,60);
    font-size: 2vw;
    margin-left: 2.5%;
    opacity: 1 !important;
    font-family: "Proxima Nova", "Helvetica Neue";
  }  
  
  #table-header {
    margin-left: 5%;
  }
  
  .out-text {
    font-size: 1.75vmin;
    color: white;
    margin-left: 11%;
    margin-top: 7%;
    font-family: "Proxima Nova", "Helvetica Neue";
  }
  

  #minimize-button {
    font-size: .97vw;
    width: auto;
    right: 66.18%;
    top: 1.5%;
    opacity: 0.6;
    zoom: 0.9;
    transition: opacity 500ms 1s
  }
  
  #data-table {
    margin-top: 4%; 
    font-size: 77%; 
    height: 72%; 
  }
  
  .leaflet-control-attribution.leaflet-control {
    width: 270px;
    padding-left: 0px;
    padding-right: 0px;
  }
  
  #out-bigtext-title {
    text-align: left;
    margin-top: 7%;
    margin-left: 11%;
    margin-bottom: 0%;
    font-size: 1vw;
    width: 270px;
  }
  
  #rank-text {
    text-align: left;
   /* width: 250px;*/
    font-size: 1vw;
    margin-left: 2.5%;
  }
  
  #out-bigtext {
    text-align: left;
    font-size: 2.3vw;
    padding-left: 0px;
    padding-top: 1%;
    margin-left: 11%;
    margin-top: 0px;
    margin-bottom: 3%;
  }
 
  .col-sm-6.col-sm-offset-3 {
    bottom: 10px;
  }
  
  .col-sm-6 {
    bottom: 30px;
  }
  
  .svg-container {
    right: 20px;
    bottom: 13px;
  }   
      
  #out-header-no-selection {
    margin-top: 20px;
    color: rgb(60,60,60);
    font-size: 1.2vw;
    font-style: italic;
    margin-left: 2.5%;
    opacity: 1;
    font-family: "Proxima Nova", "Helvetica Neue";
  }
  

  /*
      background-color: white;
      left: 1.8%;
      top: 1%;
      width: auto;
      max-width: 45%;
      height: auto;
      
      opacity: 0.7;
      zoom: 0.9;
      transition: opacity 500ms 1s
  } */
  
 /*#title-text {
   color: rgb(48,48,48);
   margin-left: 2.5%;
   max-width: 95%;
   overflow-wrap: anywhere;
   font-size: 1.75vmin;
   padding-bottom: 3%;
   font-family: "Proxima Nova", "Helvetica Neue";
 }*/

